# taptapir_projects

./: .gitignore  .gitmodules  README.md  design_doc.html  design_doc.txt  empty_project.html  file_storage.html  gamepad_test.html  index.html  main.js  manifest.json  pokescript.html  pokescript.txt  pokescript_compiler.js  sunsnake_compiler.js  taptapir.css  taptapir.html  taptapir.js  taptapir_brython.html  tile_editor.js
alien_explore/: alien_explore.html
bergen_zombies/: bergen_zombies.html  bergen_zombies_realtime.html  card_battle.html  design_doc.txt  spells.js
bug/: bug.html  bug_2.html  bug_3.html
cmyk_swap/: cmyk_swap.html  cmyk_swap_banner.psd  cmyk_swap_build.html  taptapir.js
code_editor/: code_editor.html
digging_game/: digging_game.html
dreamland_sketcher/: dreamland_sketcher.html  graph.py  run.bat  run_dreamland_sketcher_linux  run_linux
file_browser/: file_browser.html
framgang/: service_worker.js  stuff_to_add_on_build.html  todo_list.html
gem_hunt/: gem_hunt.html  image_filter.html
graphic_designer/: graphic_designer.html  manifest.json  pokescript_compiler.js  service_worker.js  taptapir.css  taptapir.js
hexagonal_fantasy/: hexagonal_fantasy_design_doc.txt
lines/: illustraptor.html  lines.html
monke/: convert_bitmap_to_level.py  levels.js  monke.html
music_maker/: music_maker.html  music_maker_2.html  taptapir.js  wiolin.html
otosopp/: .gitignore  joycon_input.sunsnake  main.js  otosopp.html  package-lock.json  (+5 more)
taptapir_build/: build_test_project.html  build_test_project_build.html  pyproject.toml  taptapir_build.py
(+60 files in other folders)
