[tool.poetry]
name = "taptapir-build"
version = "0.1.0"
description = "Packages your Taptapir project into a single html file"
authors = ["pokepetter <pokepetter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
